--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fontsource/inter": "^5.2.5",
     "@fontsource/space-grotesk": "^5.2.6",
     "@hookform/resolvers": "^3.10.0",
+    "@icons-pack/react-simple-icons": "^12.5.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-aspect-ratio": "^1.1.2",
