--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "lz-string": "^1.5.0",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
+    "react-cloudflare-turnstile": "^1.1.11",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.56.1",
