--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource/space-grotesk": "^5.2.6",
     "@hookform/resolvers": "^5.0.1",
     "@icons-pack/react-simple-icons": "^12.7.0",
+    "@marsidev/react-turnstile": "^1.1.0",
     "@radix-ui/react-accordion": "^1.2.8",
     "@radix-ui/react-alert-dialog": "^1.1.11",
     "@radix-ui/react-aspect-ratio": "^1.1.4",
@@ -58,7 +59,6 @@
     "lz-string": "^1.5.0",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
-    "react-cloudflare-turnstile": "^1.1.11",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.56.1",
