--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview",
-    "prepare": "husky"
+    "prepare": "husky",
+    "test": "vitest"
   },
   "dependencies": {
     "@fontsource/inter": "5.2.5",
@@ -91,6 +92,7 @@
     "tailwindcss": "3.4.17",
     "typescript": "5.8.3",
     "typescript-eslint": "8.31.1",
-    "vite": "6.3.4"
+    "vite": "6.3.4",
+    "vitest": "^3.2.1"
   }
 }
