--- a/package.json
+++ b/package.json
@@ -77,6 +77,10 @@
   "devDependencies": {
     "@eslint/js": "9.25.1",
     "@tailwindcss/typography": "0.5.16",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "22.15.3",
     "@types/react": "18.3.20",
     "@types/react-dom": "18.3.7",
@@ -87,6 +91,7 @@
     "eslint-plugin-react-refresh": "0.4.20",
     "globals": "15.15.0",
     "husky": "9.1.7",
+    "jsdom": "^26.1.0",
     "lovable-tagger": "1.1.8",
     "postcss": "8.5.3",
     "tailwindcss": "3.4.17",
