--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@radix-ui/react-select": "2.2.5",
     "@radix-ui/react-separator": "1.1.7",
     "@radix-ui/react-slider": "1.3.5",
-    "@radix-ui/react-slot": "1.2.3",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "1.2.5",
     "@radix-ui/react-tabs": "1.1.12",
     "@radix-ui/react-toast": "1.2.14",
@@ -54,7 +54,7 @@
     "cmdk": "1.1.1",
     "date-fns": "4.1.0",
     "docx": "9.5.0",
-    "embla-carousel-react": "8.6.0",
+    "embla-carousel-react": "^8.6.0",
     "input-otp": "1.4.2",
     "lucide-react": "0.511.0",
     "lz-string": "1.5.0",
