--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "typescript": "5.8.3",
     "typescript-eslint": "8.31.1",
     "vite": "6.3.4",
+    "vite-plugin-prerender": "^1.0.8",
     "vitest": "^3.2.1"
   }
 }
