--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "prerender": "vike build && vike prerender",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview",
@@ -97,6 +98,8 @@
     "tailwindcss": "3.4.17",
     "typescript": "5.8.3",
     "typescript-eslint": "8.31.1",
+    "vike": "^0.4.231",
+    "vike-react": "^0.6.4",
     "vite": "6.3.4",
     "vitest": "^3.2.1"
   }
