--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "build:dev": "vite build --mode development",
+    "dev": "vike dev",
+    "build": "vike build",
+    "build:dev": "vike build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview",
+    "preview": "vike preview",
     "prepare": "husky",
     "test": "vitest"
   },
@@ -72,6 +72,7 @@
     "tailwind-merge": "3.3.0",
     "tailwindcss-animate": "1.0.7",
     "vaul": "1.1.2",
+    "vike": "^0.4.231",
     "zod": "3.25.32"
   },
   "devDependencies": {
