--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
-    "lint": "eslint .",
-    "preview": "vite preview",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "generate:sitemap": "node scripts/generate-sitemap.cjs",
+    "generate:llms": "tsx scripts/generate-llms.ts",
     "prepare": "husky",
     "test": "vitest"
   },
@@ -95,6 +96,7 @@
     "lovable-tagger": "1.1.8",
     "postcss": "8.5.3",
     "tailwindcss": "3.4.17",
+    "tsx": "^4.20.3",
     "typescript": "5.8.3",
     "typescript-eslint": "8.31.1",
     "vite": "6.3.4",
