--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@fontsource/space-grotesk": "5.2.7",
     "@hookform/resolvers": "5.0.1",
     "@icons-pack/react-simple-icons": "12.9.0",
-    "@marsidev/react-turnstile": "1.1.0",
     "@radix-ui/react-accordion": "1.2.11",
     "@radix-ui/react-alert-dialog": "1.1.14",
     "@radix-ui/react-aspect-ratio": "1.1.7",
@@ -47,7 +46,6 @@
     "@radix-ui/react-toggle-group": "1.1.10",
     "@radix-ui/react-tooltip": "1.2.7",
     "@react-pdf/renderer": "4.3.0",
-    "@supabase/supabase-js": "2.49.8",
     "@tanstack/react-query": "5.77.2",
     "buffer": "6.0.3",
     "caniuse-lite": "1.0.30001718",
@@ -68,7 +66,7 @@
     "react-resizable-panels": "3.0.2",
     "react-router-dom": "6.30.1",
     "recharts": "2.15.3",
-    "resend": "4.5.1",
+    "resend": "^4.7.0",
     "sonner": "2.0.3",
     "tailwind-merge": "3.3.0",
     "tailwindcss-animate": "1.0.7",
@@ -100,6 +98,6 @@
     "typescript": "5.8.3",
     "typescript-eslint": "8.31.1",
     "vite": "6.3.4",
-    "vitest": "^3.2.1"
+    "vitest": "^3.2.4"
   }
 }
