--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
     "@types/react-dom": "18.3.7",
     "@vitejs/plugin-react-swc": "3.9.0",
     "autoprefixer": "10.4.21",
-    "eslint": "9.25.1",
+    "eslint": "^9.25.1",
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-react-refresh": "0.4.20",
     "globals": "15.15.0",
@@ -97,7 +97,7 @@
     "tsx": "^4.20.3",
     "typescript": "5.8.3",
     "typescript-eslint": "8.31.1",
-    "vite": "6.3.4",
+    "vite": "^6.3.4",
     "vitest": "^3.2.4"
   }
 }
