--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@fontsource/inter": "5.2.5",
+    "@fontsource/public-sans": "^5.2.7",
     "@fontsource/space-grotesk": "5.2.7",
     "@hookform/resolvers": "5.0.1",
     "@icons-pack/react-simple-icons": "12.9.0",
@@ -66,7 +66,7 @@
     "react-resizable-panels": "3.0.2",
     "react-router-dom": "6.30.1",
     "recharts": "2.15.3",
-    "resend": "^4.7.0",
+    "resend": "^4.8.0",
     "sonner": "2.0.3",
     "tailwind-merge": "3.3.0",
     "tailwindcss-animate": "1.0.7",
@@ -76,8 +76,8 @@
   "devDependencies": {
     "@eslint/js": "9.25.1",
     "@tailwindcss/typography": "0.5.16",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/node": "22.15.3",
@@ -85,7 +85,7 @@
     "@types/react-dom": "18.3.7",
     "@vitejs/plugin-react-swc": "3.9.0",
     "autoprefixer": "10.4.21",
-    "eslint": "^9.25.1",
+    "eslint": "^9.37.0",
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-react-refresh": "0.4.20",
     "globals": "15.15.0",
@@ -94,10 +94,14 @@
     "lovable-tagger": "1.1.8",
     "postcss": "8.5.3",
     "tailwindcss": "3.4.17",
-    "tsx": "^4.20.3",
+    "tsx": "^4.20.6",
     "typescript": "5.8.3",
     "typescript-eslint": "8.31.1",
-    "vite": "^6.3.4",
+    "vite": "^6.3.7",
     "vitest": "^3.2.4"
-  }
+  },
+  "trustedDependencies": [
+    "@swc/core",
+    "esbuild"
+  ]
 }
