feat: Pre-generate CV assets and simplify CV page
Introduces a `scripts/generate-cv-assets.ts` script to pre-render CVs in PDF and DOCX formats for both English and German. The generated assets (`public/uwe-schwarz-cv-*.{pdf,docx}`) are now committed to the repository.

Updates `.husky/pre-commit` hook to automatically run the generation script and stage the new files.
Refactors `CVDocument.tsx` and `CVDocumentDocx.tsx` to support server-side rendering (Node.js environment).

Significantly simplifies `src/pages/CV.tsx` by removing client-side PDF generation, DOCX generation, the CV editor, and related dependencies (`react-pdf`). The CV page now directly embeds the pre-generated PDF via an `iframe` and provides direct download links to the static files, improving load performance and reducing client-side complexity.

Switches `generate:llms` and `generate:sitemap` script execution in `package.json` and `.husky/pre-commit` from `tsx`/`node` to `bun`.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build:dev": "vite build --mode development",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "generate:sitemap": "node scripts/generate-sitemap.cjs",
-    "generate:llms": "tsx scripts/generate-llms.ts",
+    "generate:llms": "bun scripts/generate-llms.ts",
+    "generate:cv": "bun scripts/generate-cv-assets.ts",
     "prepare": "husky",
     "test": "vitest"
   },
