--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "@radix-ui/react-toggle": "1.1.9",
     "@radix-ui/react-toggle-group": "1.1.10",
     "@radix-ui/react-tooltip": "1.2.7",
+    "@react-email/components": "^0.5.7",
+    "@react-email/render": "^1.4.0",
     "@react-pdf/renderer": "4.3.0",
     "@tanstack/react-query": "5.77.2",
     "buffer": "6.0.3",
@@ -87,13 +89,12 @@
     "@types/react-dom": "18.3.7",
     "@vitejs/plugin-react-swc": "3.9.0",
     "autoprefixer": "10.4.21",
-    "eslint": "^9.37.0",
+    "eslint": "^9.38.0",
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-react-refresh": "0.4.20",
     "globals": "15.15.0",
     "husky": "9.1.7",
     "jsdom": "^26.1.0",
-    "lovable-tagger": "1.1.8",
     "postcss": "8.5.3",
     "tailwindcss": "3.4.17",
     "tsx": "^4.20.6",
