--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite_react_shadcn_ts",
+  "name": "uweschwarz-eu",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -48,7 +48,6 @@
     "@react-email/components": "^0.5.7",
     "@react-email/render": "^1.4.0",
     "@react-pdf/renderer": "4.3.0",
-    "@supabase/supabase-js": "^2.81.1",
     "@tanstack/react-query": "5.77.2",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
@@ -57,14 +56,13 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "1.4.2",
     "lucide-react": "0.511.0",
-    "next": "^16.0.1",
+    "next": "^16.0.3",
     "react": "19.2.0",
     "react-day-picker": "9.7.0",
     "react-dom": "19.2.0",
     "react-hook-form": "7.56.4",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "3.0.2",
-    "recharts": "2.15.3",
     "resend": "^4.8.0",
     "sonner": "2.0.3",
     "tailwind-merge": "3.3.0",
@@ -74,7 +72,7 @@
   },
   "devDependencies": {
     "@eslint/js": "9.25.1",
-    "@next/eslint-plugin-next": "^16.0.1",
+    "@next/eslint-plugin-next": "^16.0.3",
     "@tailwindcss/typography": "0.5.16",
     "@types/node": "24.9.1",
     "@types/react": "19.0.7",
