--- a/package.json
+++ b/package.json
@@ -14,50 +14,49 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@hookform/resolvers": "5.0.1",
-    "@icons-pack/react-simple-icons": "12.9.0",
-    "@radix-ui/react-avatar": "1.1.10",
-    "@radix-ui/react-dialog": "1.1.14",
-    "@radix-ui/react-label": "2.1.7",
+    "@hookform/resolvers": "^5.2.2",
+    "@icons-pack/react-simple-icons": "^13.8.0",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slot": "^1.2.4",
-    "@radix-ui/react-tabs": "1.1.12",
-    "@radix-ui/react-toast": "1.2.14",
-    "@radix-ui/react-toggle": "1.1.9",
-    "@radix-ui/react-tooltip": "1.2.7",
-    "@react-email/components": "^0.5.7",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-toast": "^1.2.15",
+    "@radix-ui/react-toggle": "^1.1.10",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@react-email/components": "^1.0.1",
     "@react-email/render": "^1.4.0",
-    "@react-pdf/renderer": "4.3.0",
-    "@tanstack/react-query": "5.77.2",
-    "class-variance-authority": "0.7.1",
-    "clsx": "2.1.1",
-    "docx": "9.5.0",
+    "@react-pdf/renderer": "^4.3.1",
+    "@tanstack/react-query": "^5.90.9",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "docx": "^9.5.1",
     "embla-carousel-react": "^8.6.0",
-    "lucide-react": "0.511.0",
+    "lucide-react": "^0.553.0",
     "next": "^16.0.3",
-    "react": "19.2.0",
-    "react-hook-form": "7.56.4",
+    "react": "^19.2.0",
+    "react-hook-form": "^7.66.0",
     "react-icons": "^5.5.0",
     "resend": "^4.8.0",
-    "sonner": "2.0.3",
-    "tailwind-merge": "3.3.0",
-    "tailwindcss-animate": "1.0.7",
-    "zod": "3.25.32"
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@eslint/js": "9.25.1",
+    "@eslint/js": "^9.39.1",
     "@next/eslint-plugin-next": "^16.0.3",
-    "@types/node": "24.9.1",
-    "@types/react": "19.0.7",
-    "autoprefixer": "10.4.21",
+    "@types/node": "^24.10.1",
+    "@types/react": "^19.2.5",
+    "autoprefixer": "^10.4.22",
     "eslint": "^9.39.1",
-    "eslint-plugin-react-hooks": "5.2.0",
-    "globals": "15.15.0",
-    "husky": "9.1.7",
-    "jsdom": "^26.1.0",
-    "postcss": "8.5.6",
-    "tailwindcss": "3.4.17",
-    "typescript": "5.9.3",
-    "typescript-eslint": "8.31.1"
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "globals": "^16.5.0",
+    "husky": "^9.1.7",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.46.4"
   },
   "trustedDependencies": [
     "@swc/core",
