--- a/package.json
+++ b/package.json
@@ -48,13 +48,12 @@
     "@next/eslint-plugin-next": "^16.0.3",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
-    "autoprefixer": "^10.4.22",
+    "@tailwindcss/postcss": "^4.1.17",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "globals": "^16.5.0",
     "husky": "^9.1.7",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.18",
+    "tailwindcss": "^4.1.17",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.46.4"
   },
