--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@react-email/render": "^2.0.0",
     "@react-pdf/renderer": "^4.3.1",
     "@tanstack/react-query": "^5.90.9",
+    "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "docx": "^9.5.1",
