--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ next-env.d.ts
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
+!.vscode/settings.json
 .idea
 
 # Crush agent directory
