--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "docx": "^9.5.1",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.561.0",
+    "motion": "^12.23.26",
     "next": "^16.0.10",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
