chore: move middleware to proxy and update deps

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "bun run --bun next build",
     "start": "next start",
     "lint": "eslint . --ext ts,tsx --max-warnings 0",
+    "typecheck": "tsc --noEmit",
     "generate:sitemap": "bun scripts/generate-sitemap.cjs",
     "generate:llms": "bun scripts/generate-llms.ts",
     "generate:cv": "bun scripts/generate-cv-assets.ts",
@@ -33,7 +34,7 @@
     "docx": "^9.5.1",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.563.0",
-    "motion": "12.29.2",
+    "motion": "12.31.0",
     "next": "^16.1.6",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
