--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "clsx": "^2.1.1",
     "docx": "^9.5.1",
     "embla-carousel-react": "^8.6.0",
+    "geist": "^1.7.0",
     "lucide-react": "^0.563.0",
     "motion": "12.33.0",
     "next": "^16.1.6",
