--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "bun run --bun next dev",
     "build": "bun run --bun next build",
     "start": "next start",
-    "lint": "oxlint --deny-warnings",
+    "lint": "oxlint --deny-warnings --type-aware",
     "format": "oxfmt",
     "format:check": "oxfmt --check",
     "typecheck": "tsc --noEmit",
@@ -63,6 +63,7 @@
     "husky": "^9.1.7",
     "oxfmt": "^0.32.0",
     "oxlint": "^1.47.0",
+    "oxlint-tsgolint": "^0.12.2",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3"
