Switch typecheck to tsgo and refresh tooling deps
- Replace tsc with tsgo; add @typescript/native-preview
- Bump oxfmt/oxlint/oxlint-tsgolint to latest versions
- Update lucide-react to 0.575.0
- Drop typescript dev dependency from package.json

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "oxlint --deny-warnings --type-aware",
     "format": "oxfmt",
     "format:check": "oxfmt --check",
-    "typecheck": "tsc --noEmit",
+    "typecheck": "tsgo --noEmit",
     "generate:sitemap": "bun scripts/generate-sitemap.ts",
     "generate:llms": "bun scripts/generate-llms.ts",
     "generate:cv": "bun scripts/generate-cv-assets.ts",
@@ -36,7 +36,7 @@
     "docx": "^9.5.3",
     "embla-carousel-react": "^8.6.0",
     "geist": "^1.7.0",
-    "lucide-react": "^0.574.0",
+    "lucide-react": "^0.575.0",
     "motion": "12.34.2",
     "next": "^16.1.6",
     "react": "^19.2.4",
@@ -55,18 +55,18 @@
     "@tailwindcss/postcss": "^4.2.0",
     "@types/node": "^25.3.0",
     "@types/react": "^19.2.14",
+    "@typescript/native-preview": "^7.0.0-dev.20260219.1",
     "autoprefixer": "^10.4.24",
     "eslint-plugin-no-only-tests": "^3.3.0",
     "eslint-plugin-perfectionist": "^5.6.0",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-unused-imports": "^4.4.1",
     "husky": "^9.1.7",
-    "oxfmt": "^0.33.0",
-    "oxlint": "^1.48.0",
-    "oxlint-tsgolint": "^0.14.0",
+    "oxfmt": "^0.34.0",
+    "oxlint": "^1.49.0",
+    "oxlint-tsgolint": "^0.14.1",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.2.0",
-    "typescript": "^5.9.3"
+    "tailwindcss": "^4.2.0"
   },
   "trustedDependencies": [
     "@swc/core",
