chore(deps): bump motion and react-hook-form
- Update motion to ^12.34.3 (from pinned 12.34.2)
- Bump react-hook-form to 7.71.2
- Update @typescript/native-preview dev build to 20260221.1
- Bump oxlint-tsgolint to 0.14.2 and refresh bun.lock

--- a/package.json
+++ b/package.json
@@ -37,11 +37,11 @@
     "embla-carousel-react": "^8.6.0",
     "geist": "^1.7.0",
     "lucide-react": "^0.575.0",
-    "motion": "12.34.2",
+    "motion": "^12.34.3",
     "next": "^16.1.6",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
-    "react-hook-form": "^7.71.1",
+    "react-hook-form": "^7.71.2",
     "react-icons": "^5.5.0",
     "resend": "^6.9.2",
     "sonner": "^2.0.7",
@@ -55,7 +55,7 @@
     "@tailwindcss/postcss": "^4.2.0",
     "@types/node": "^25.3.0",
     "@types/react": "^19.2.14",
-    "@typescript/native-preview": "^7.0.0-dev.20260219.1",
+    "@typescript/native-preview": "^7.0.0-dev.20260221.1",
     "autoprefixer": "^10.4.24",
     "eslint-plugin-no-only-tests": "^3.3.0",
     "eslint-plugin-perfectionist": "^5.6.0",
@@ -64,7 +64,7 @@
     "husky": "^9.1.7",
     "oxfmt": "^0.34.0",
     "oxlint": "^1.49.0",
-    "oxlint-tsgolint": "^0.14.1",
+    "oxlint-tsgolint": "^0.14.2",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.2.0"
   },
